# veriplan

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Justfile  README.md
.cargo/: .config.toml.swp  config.toml
.pi-lens/: lsp.json
openspec/: config.yaml
openspec/changes/archive/2026-06-20-veriplan-pre-commit-hook/: design.md
openspec/changes/auto-detect-and-project-path/: design.md  tasks.md
openspec/changes/flexible-input/: proposal.md  tasks.md
openspec/changes/veriplan-lsp-server/: design.md  proposal.md  tasks.md
openspec/changes/veriplan-plan-verifier/: design.md  proposal.md  tasks.md
openspec/changes/veriplan-pre-commit-hook/: proposal.md  tasks.md
openspec/specs/hook-config/: spec.md
openspec/specs/lsp-code-actions/: spec.md
openspec/specs/lsp-completions/: spec.md
openspec/specs/lsp-diagnostics/: spec.md
openspec/specs/lsp-navigation/: spec.md
openspec/specs/lsp-standalone-files/: spec.md
openspec/specs/lsp-symbols/: spec.md
openspec/specs/lsp-transport/: spec.md
openspec/specs/pre-commit-mode/: spec.md
openspec/specs/stdin-input/: spec.md
src/: cli.rs  cmd_visualize.rs  lib.rs  main.rs  results.rs
src/annotator/: helpers.rs  mod.rs
src/checker/: checks.rs  convertibility.rs  mod.rs
src/input/: loader.rs  mod.rs  resolve.rs
src/ir/: mod.rs
src/lsp/: code_actions.rs  completions.rs  diagnostics.rs  mod.rs  navigation.rs  state.rs  symbols.rs  transport.rs
src/parser/: helpers.rs  mod.rs
src/translator/: mod.rs
src/visualizer/: mod.rs
tests/: flexible_input.rs  multi_change_check.rs
(+31 files in other folders)
