[package]
name = "veriplan"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"

# Parsing
tree-sitter = "0.26"
tree-sitter-language-pack = "1"

# LSP
lsp-server = "0.7"
lsp-types = "0.95"
crossbeam-channel = "0.5"

# Model output
tempfile = "3"
log = "0.4"
env_logger = "0.11"
streaming-iterator = "0.1"

# Optional: Z3 SAT checking
z3 = { version = "0.14", optional = true }

[features]
default = []
z3 = ["dep:z3"]
